add seo to page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
 /* ./styles/global.css */
 @tailwind base;
 @tailwind components;
+
+/* Start purging... */
 @tailwind utilities;
+/* Stop purging. */
