--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,6 @@
 /* ./styles/global.css */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 
