--- a/components/common/Footer/Footer.module.css
+++ b/components/common/Footer/Footer.module.css
@@ -1,3 +1,3 @@
 .container {
-  @apply flex items-center justify-center w-full text-sm;
+  @apply flex items-center justify-center w-full text-sm text-gray-600;
 }
